Added filterting of observations based on attributes.
