# src/handlers/observations.ts
@@ -2,13 +2,14 @@ import { httpFunc } from "@common";
 import { Container } from "@container";
 import { GetObservationsRequest, GetObservationsRequestSort, ObservationRequest } from "@entities/observations";
 import { observationRequestSchema } from "@entities/schemas";
-import { httpRouter, noContent } from "uno-serverless";
+import { created, httpRouter, noContent } from "uno-serverless";
 
 export const handler = httpFunc()
   .handler(httpRouter<Container>({
     "": {
       get: async ({ event, services: { observationsService } }) => {
         const request: GetObservationsRequest = {
+          attributes: event.parameters.attributes ? event.parameters.attributes.split(",") : undefined,
           endTs: event.parameters.endTs ? parseInt(event.parameters.endTs, 10) : undefined,
           nextToken: event.parameters.nextToken,
           sort: event.parameters.sort
@@ -22,7 +23,8 @@ export const handler = httpFunc()
       post: async ({ event, services: { observationsService } }) => {
         const request = event.body<ObservationRequest>({ validate: observationRequestSchema });
 
-        return observationsService().report(request);
+        const observation = await observationsService().report(request);
+        return created(`/api/v1/observations/${observation.id}`, observation);
       },
     },
     ":observationId": {
